# pidi-spotify

./: .gitignore  LICENSE.txt  README.md  hook.sh  pidi-spotify.service  setup.cfg  setup.py  start.sh
pidi_spotify/: __init__.py  __main__.py  display.py  fifo.py  hook.py  st7789.py
